tests/snapshots/opendbc/generator/toyota/toyota_nodsu_pt.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 401
    name: STEERING_LTA
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: SETME_X3
        multiplexer_indicator: Plain
        start_bit: 29
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: PERCENTAGE
        multiplexer_indicator: Plain
        start_bit: 39
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: TORQUE_WIND_DOWN
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: ANGLE
        multiplexer_indicator: Plain
        start_bit: 55
        size: 8
        byte_order: BigEndian
        value_type: Signed
        factor: 0.5
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: STEER_ANGLE_CMD
        multiplexer_indicator: Plain
        start_bit: 15
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 0.0573
        offset: 0
        min: -540
        max: 540
        unit: ""
        receivers:
          - XXX
      - name: STEER_REQUEST_2
        multiplexer_indicator: Plain
        start_bit: 25
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: LKA_ACTIVE
        multiplexer_indicator: Plain
        start_bit: 26
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CLEAR_HOLD_STEERING_ALERT
        multiplexer_indicator: Plain
        start_bit: 30
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 6
        size: 6
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: STEER_REQUEST
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: SETME_X1
        multiplexer_indicator: Plain
        start_bit: 7
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 550
    name: BRAKE_MODULE
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: BRAKE_PRESSURE
        multiplexer_indicator: Plain
        start_bit: 0
        size: 9
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 511
        unit: ""
        receivers:
          - XXX
      - name: BRAKE_POSITION
        multiplexer_indicator: Plain
        start_bit: 16
        size: 9
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 511
        unit: ""
        receivers:
          - XXX
      - name: BRAKE_PRESSED
        multiplexer_indicator: Plain
        start_bit: 37
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 610
    name: EPS_STATUS
    size: 8
    transmitter:
      NodeName: EPS
    signals:
      - name: IPAS_STATE
        multiplexer_indicator: Plain
        start_bit: 3
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: LKA_STATE
        multiplexer_indicator: Plain
        start_bit: 31
        size: 7
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 127
        unit: ""
        receivers:
          - XXX
      - name: LTA_STATE
        multiplexer_indicator: Plain
        start_bit: 15
        size: 5
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 31
        unit: ""
        receivers:
          - XXX
      - name: TYPE
        multiplexer_indicator: Plain
        start_bit: 24
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 881
    name: LTA_RELATED
    size: 8
    transmitter:
      NodeName: FCM
    signals:
      - name: GAS_PEDAL
        multiplexer_indicator: Plain
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.005
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: STEER_ANGLE
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 0.0573
        offset: 0
        min: -500
        max: 500
        unit: ""
        receivers:
          - XXX
      - name: TURN_SIGNALS
        multiplexer_indicator: Plain
        start_bit: 35
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: UNKNOWN_2
        multiplexer_indicator: Plain
        start_bit: 58
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: LDA_SA_TOGGLE
        multiplexer_indicator: Plain
        start_bit: 59
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: LTA_STEER_REQUEST
        multiplexer_indicator: Plain
        start_bit: 60
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: UNKNOWN
        multiplexer_indicator: Plain
        start_bit: 61
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: STEERING_PRESSED
        multiplexer_indicator: Plain
        start_bit: 63
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 1014
    name: BSM
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: L_ADJACENT
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: L_APPROACHING
        multiplexer_indicator: Plain
        start_bit: 8
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: R_ADJACENT
        multiplexer_indicator: Plain
        start_bit: 1
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: R_APPROACHING
        multiplexer_indicator: Plain
        start_bit: 10
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: ADJACENT_ENABLED
        multiplexer_indicator: Plain
        start_bit: 7
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: APPROACHING_ENABLED
        multiplexer_indicator: Plain
        start_bit: 15
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
comments:
  - Plain:
      comment: IMPORT _toyota_2017.dbc
  - Plain:
      comment: IMPORT _toyota_adas_standard.dbc
  - Signal:
      message_id:
        Standard: 401
      name: PERCENTAGE
      comment: "driver override percentage (0-100), very close to steeringPressed in OP"
  - Signal:
      message_id:
        Standard: 401
      name: TORQUE_WIND_DOWN
      comment: used to wind down torque on user override
  - Signal:
      message_id:
        Standard: 401
      name: ANGLE
      comment: angle of car relative to lane center on LTA camera
  - Signal:
      message_id:
        Standard: 401
      name: STEER_ANGLE_CMD
      comment: "desired angle, OEM steers up to 95 degrees, no angle limit but torque will bottom out"
  - Signal:
      message_id:
        Standard: 401
      name: CLEAR_HOLD_STEERING_ALERT
      comment: "set to 1 when user clears LKAS_HUD->LDA_ALERT ('Hold Steering') by applying torque to steering wheel"
  - Signal:
      message_id:
        Standard: 401
      name: STEER_REQUEST
      comment: "enable bit for steering, 1 to steer, 0 to not"
  - Signal:
      message_id:
        Standard: 401
      name: STEER_REQUEST_2
      comment: "enable bit for steering, 1 to steer, 0 to not"
  - Signal:
      message_id:
        Standard: 401
      name: LKA_ACTIVE
      comment: 1 when using LTA for LKA
  - Signal:
      message_id:
        Standard: 401
      name: SETME_X1
      comment: "usually 1, seen at 0 on some South American Corollas indicating lack of stock Lane Tracing Assist"
  - Signal:
      message_id:
        Standard: 401
      name: SETME_X3
      comment: "almost completely correlates with Toyota Safety Sense version, but may instead describe max torque when using LTA. if TSS 2.5 or 2022 RAV4, this is always 1. if TSS 2.0 this is always 3 (or 0 on Alphard, Highlander, NX)"
  - Signal:
      message_id:
        Standard: 550
      name: BRAKE_PRESSURE
      comment: seems prop to pedal force
  - Signal:
      message_id:
        Standard: 550
      name: BRAKE_POSITION
      comment: "seems proportional to pedal displacement, unclear the max value of 0x1c8"
  - Signal:
      message_id:
        Standard: 610
      name: TYPE
      comment: "seems 1 on Corolla, 0 on all others"
  - Signal:
      message_id:
        Standard: 881
      name: GAS_PEDAL
      comment: "not set on all cars, only seen on TSS 2.5 Camry Hybrid so far"
  - Signal:
      message_id:
        Standard: 881
      name: STEER_ANGLE
      comment: matches STEER_TORQUE_SENSOR->STEER_ANGLE
  - Signal:
      message_id:
        Standard: 881
      name: TURN_SIGNALS
      comment: flipped on some cars
  - Signal:
      message_id:
        Standard: 881
      name: LDA_SA_TOGGLE
      comment: not applicable for all cars
  - Signal:
      message_id:
        Standard: 881
      name: LTA_STEER_REQUEST
      comment: "only applicable for TSS 2.5: matches STEERING_LTA->STEER_REQUEST"
  - Signal:
      message_id:
        Standard: 881
      name: UNKNOWN
      comment: related to steering wheel angle
  - Signal:
      message_id:
        Standard: 881
      name: STEERING_PRESSED
      comment: "only applicable for TSS 2.5: low sensitivity steering wheel pressed by driver signal"
  - Signal:
      message_id:
        Standard: 1014
      name: L_ADJACENT
      comment: "vehicle adjacent left side of car. enabled above 10mph, regardless of ADJACENT_ENABLED or APPROACHING_ENABLED"
  - Signal:
      message_id:
        Standard: 1014
      name: L_APPROACHING
      comment: "vehicle approaching from left side of car. enabled above 10mph, regardless of ADJACENT_ENABLED or APPROACHING_ENABLED"
  - Signal:
      message_id:
        Standard: 1014
      name: R_ADJACENT
      comment: "vehicle adjacent right side of car. enabled above 10mph, regardless of ADJACENT_ENABLED or APPROACHING_ENABLED"
  - Signal:
      message_id:
        Standard: 1014
      name: R_APPROACHING
      comment: "vehicle approaching from right side of car. enabled above 10mph, regardless of ADJACENT_ENABLED or APPROACHING_ENABLED"
  - Signal:
      message_id:
        Standard: 1014
      name: ADJACENT_ENABLED
      comment: "when BSM is enabled in settings, this is on along with APPROACHING_ENABLED. this controls bsm alert visibility"
  - Signal:
      message_id:
        Standard: 1014
      name: APPROACHING_ENABLED
      comment: "when BSM is enabled in settings, this is on along with ADJACENT_ENABLED. this controls bsm alert visibility"
value_descriptions:
  - Signal:
      message_id:
        Standard: 401
      name: SETME_X3
      value_descriptions:
        - id: 3
          description: TSS 2.0
        - id: 1
          description: TSS 2.5 or 2022 RAV4
        - id: 0
          description: "TSS 2.0 on Alphard, Highlander, NX"
  - Signal:
      message_id:
        Standard: 610
      name: IPAS_STATE
      value_descriptions:
        - id: 5
          description: override
        - id: 3
          description: enabled
        - id: 1
          description: disabled
  - Signal:
      message_id:
        Standard: 610
      name: LKA_STATE
      value_descriptions:
        - id: 25
          description: temporary_fault
        - id: 17
          description: permanent_fault
        - id: 11
          description: lka_missing_unavailable2
        - id: 9
          description: temporary_fault2
        - id: 5
          description: active
        - id: 3
          description: lka_missing_unavailable
        - id: 1
          description: standby
  - Signal:
      message_id:
        Standard: 610
      name: LTA_STATE
      value_descriptions:
        - id: 25
          description: temporary_fault
        - id: 9
          description: temporary_fault2
        - id: 5
          description: active
        - id: 3
          description: lta_missing_unavailable
        - id: 1
          description: standby
