tests/snapshots/opendbc/generator/toyota/toyota_tnga_k_pt.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 550
    name: BRAKE_MODULE
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: BRAKE_PRESSURE
        multiplexer_indicator: Plain
        start_bit: 0
        size: 9
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 511
        unit: ""
        receivers:
          - XXX
      - name: BRAKE_POSITION
        multiplexer_indicator: Plain
        start_bit: 16
        size: 9
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 511
        unit: ""
        receivers:
          - XXX
      - name: BRAKE_PRESSED
        multiplexer_indicator: Plain
        start_bit: 37
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 610
    name: EPS_STATUS
    size: 5
    transmitter:
      NodeName: EPS
    signals:
      - name: IPAS_STATE
        multiplexer_indicator: Plain
        start_bit: 3
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: LKA_STATE
        multiplexer_indicator: Plain
        start_bit: 31
        size: 7
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 127
        unit: ""
        receivers:
          - XXX
      - name: TYPE
        multiplexer_indicator: Plain
        start_bit: 24
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 39
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
comments:
  - Plain:
      comment: IMPORT _toyota_2017.dbc
  - Plain:
      comment: IMPORT _toyota_adas_standard.dbc
  - Signal:
      message_id:
        Standard: 550
      name: BRAKE_PRESSURE
      comment: seems prop to pedal force
  - Signal:
      message_id:
        Standard: 550
      name: BRAKE_POSITION
      comment: "seems proportional to pedal displacement, unclear the max value of 0x1c8"
  - Signal:
      message_id:
        Standard: 610
      name: TYPE
      comment: "seems 1 on Corolla, 0 on all others"
value_descriptions:
  - Signal:
      message_id:
        Standard: 610
      name: IPAS_STATE
      value_descriptions:
        - id: 5
          description: override
        - id: 3
          description: enabled
        - id: 1
          description: disabled
  - Signal:
      message_id:
        Standard: 610
      name: LKA_STATE
      value_descriptions:
        - id: 25
          description: temporary_fault
        - id: 9
          description: temporary_fault2
        - id: 5
          description: active
        - id: 1
          description: standby
